--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:32:05.153Z
-Commit: Correct typo in configuration file
+Timestamp: 2025-11-06T00:33:52.065Z
+Commit: Implement user profile customization
