--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:33:52.065Z
-Commit: Implement user profile customization
+Timestamp: 2025-11-06T00:34:56.809Z
+Commit: Correct typo in configuration file
