--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:45:23.399Z
-Commit: Patch API endpoint error handling
+Timestamp: 2025-11-06T00:45:56.359Z
+Commit: Fix CSS styling bug on mobile devices
