--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,3 @@
 Guild.xyz verification
-Timestamp: 2025-11-06T00:47:22.544Z
-Commit: Introduce real-time notifications
+Timestamp: 2025-11-06T00:47:34.562Z
+Commit: Add multi-language support
